user settings : Fix active background links when a modal is visible.
A bug caused background links to open even when a modal in the
user settings overlay was active in the foreground. This commit fixes this
by disabling mouse events for the background when the modal is active.
Now the modal closes when you click outside its area.

Fixes #10654

--- a/static/styles/settings.scss
+++ b/static/styles/settings.scss
@@ -1462,6 +1462,7 @@ body:not(.night-mode) #account-settings .custom_user_field .datepicker {
 
 .modal.fade.in {
     top: 50%;
+    pointer-events: all;
 }
 
 #id_realm_create_stream_permission,
